# bloc-api

./: .gitignore  README.md  alembic.ini  main.py  migrations.txt  pyproject.toml  replit.nix  requirements.txt  sql_app.db
alembic/: env.py
alembic/versions/: 016c31085b50_added_models_back.py  088a08016aa5_manually_updated_migration.py  127629af9c5e_deleted_new_column_so_alembic_can_open_.py  12eeacdaf477_.py  1ea328d70b85_deleted_end_user_cred_has_end_user_.py  32116e4632c1_second_auto.py  484dd0c2d20f_dropping_end_user_fields_to_generate_.py  4ac622e4432d_first_revision.py  4eb4931200c0_added_pricing_plan_and_login_count_.py  54f0962d588b_added_time_zone_field_for_users.py  5c3787a65cad_added_all_back_again.py  708e50098ec2_adding_end_user_fields_to_generate_.py  88c5db0dbc7b_model_work.py  8abc5bcc20cb_more_model_work.py  8aff0da1d9e0_deleted_end_user_cred_has_end_user_.py  8b01ede63a42_first_auto.py  8be029647f19_notice_them_my_go.py  8ec496d732dd_linking_end_user_creds_to_end_user_email.py  99a417ac03ee_deleted_new_columns.py  a2bba0c903bd_importing_models_in_init_py.py  a425df258c4f_come_the_fuck_on_you_fucking_stupid_ass_.py  a67ac1b680ae_third_auto.py  b0325653e017_capture_new_columns.py  bca055ef21e8_added_model_import_to_migration_env_py_.py  cdc7d076e097_deleted_all_models_so_alembic_can_see.py  e2c9dc6455c2_end_user_cred_has_end_user_email_link.py  e33acf704ad1_was_not_auto_genrating.py  (+3 more)
bloc/: app.py
models/: models.py
resources/: users.py
sql_app/: __init__.py  crud.py  database.py  models.py  pricings.py  scheduler.py  schemas.py
(+2 files in other folders)
